# menderbot

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .menderbot-config.yaml  .pre-commit-config.yaml  .scrutinizer.yml  CONTRIBUTING.md  DESIGN.md  Dockerfile  MANIFEST.in  Makefile  PARSERS.md  Pipfile  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  pytest.ini  setup.cfg  tbump.toml
.github/workflows/: buildwheels.yml  ci.yml  prereleased.yml  publish.yml  push.yml  released.yml
doc/: ADD_A_LANGUAGE.md  DESIGN.md  RELEASING.md  ROADMAP.md
doc/examples/: COMMANDS.md  COMMIT.md
menderbot/: __init__.py  __main__.py  assistant.py  build_treesitter.py  check.py  cli.py  cli_helper.py  code.py  config.py  doc.py  git_client.py  ingest.py  llm.py  prompts.py  python_cst.py  setup.py.off  source_file.py  typing.py
menderbot/antlr_generated/: CPP14Lexer.py  CPP14Parser.py  CPP14ParserListener.py  PythonLexer.py  PythonLexerBase.py  PythonParser.py  PythonParserBase.py  PythonParserListener.py
scripts/: generate_parsers.sh  smoke.sh
tests/: conftest.py  test_cli.py  test_code.py  test_code_indent.py  test_code_parsing.py  test_doc.py  test_doc.test_adds_python_doc.approved.txt  test_integration.py  test_source_file.py  test_typing.py
