[project]
name = "menderbot"
dynamic = ["version"]
description = "The AI-powered command line tool for working with legacy code"
readme = "README.md"
authors = [{ name = "Ray Myers" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "gpt", "refactoring", "legacy", "code"]
dependencies = [
    "click >= 8.0.0",
    "rich-click >= 1.6.0",
    "tree-sitter >= 0.20.1, < 0.21.0", # match build-system version
    "charset-normalizer >= 3.2.0",
    "tiktoken",
    "llama-index >= 0.7.12",
    "rich-click",
    "gitpython"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black", 
    "bumpver", 
    "isort", 
    "pip-tools", 
    "pytest",
    "pylint",
    "mypy",
    "pre-commit",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/craftvscruft/menderbot"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "tree-sitter >= 0.20.1, < 0.21.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
menderbot = "menderbot:cli"

[tool.setuptools]
packages = ["menderbot"]
include-package-data = true # include MANIFEST.in

[tool.setuptools.dynamic]
version = {attr = "menderbot.__version__"}

[tool.setuptools.cmdclass]
build = "menderbot.build_treesitter.MyBuild"

[tool.black]
exclude = "vendor"

"README.md" = [
    "{version}",
    "{pep440_version}",
]

